Fix spacing

--- a/design/hials14/stylesheets/hials.css
+++ b/design/hials14/stylesheets/hials.css
@@ -196,6 +196,10 @@ blockquote p:after {
 .colspacing {
 	border-spacing: 15px 0;
 }
+
+.verticalspacing {
+	padding-bottom: 15px;
+}
     
 /* columns of same height styles */
 .container-xs-height {
